--- a/solopass-web-ui/package.json
+++ b/solopass-web-ui/package.json
@@ -7,10 +7,12 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0"
-  },
+
+"dependencies": {
+  "react": "^18.3.1",
+  "react-dom": "^18.3.1",
+  "@solopass/sdk": "file:../smartagent"
+},
   "devDependencies": {
     "vite": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.0"
