♻️ Refactored SmartAgent to use clean @solopass/sdk import

--- a/solopass-web-ui/package.json
+++ b/solopass-web-ui/package.json
@@ -7,15 +7,16 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-
-"dependencies": {
-  "react": "^18.3.1",
-  "react-dom": "^18.3.1",
-  "@solopass/sdk": "file:../smartagent"
-},
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "@solopass/sdk": "file:../sdk"
+  },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "vite": "^5.4.19",
+    "@vitejs/plugin-react": "^4.6.0"
   }
 }
+
+
 
