--- a/solopass-web-ui/vite.config
+++ b/solopass-web-ui/vite.config
@@ -7,7 +7,7 @@ export default defineConfig({
   base: "./",
   build: {
     rollupOptions: {
-      external: ['openai'] // optional: for CLI compatibility
+      external: ['openai']
     }
   },
   resolve: {
@@ -16,4 +16,3 @@ export default defineConfig({
     }
   }
 })
-
